src/app/components/test/form-questions/form-questions.component.scss
.mat-mdc-tab-header,
.mat-mdc-tab-group,
.mat-mdc-tab-labels,
.mat-mdc-tab-header-pagination,
.mat-mdc-tab-header-pagination-controls-enabled,
.mat-mdc-tab-body-wrapper,
.mat-mdc-tab,
.mat-mdc-tab-nav-bar {
  --mdc-tab-indicator-active-indicator-color: #ffffff;
  --mat-tab-header-active-label-text-color: #ffffff;
  --mat-tab-header-inactive-label-text-color: #f0f0f0;
  --mat-mdc-tab-header-pagination-chevron-color: #ffffff !important;

  --mat-full-pseudo-checkbox-selected-checkmark-color: #ffffff;
  --mdc-tab-text-label-color: #ffffff;
  --mdc-tab-text-label-color-default: #f5f5f5;
}

::ng-deep .mat-mdc-tab-header-pagination-chevron,
.mat-mdc-tab-header-pagination-before .mat-mdc-tab-header-pagination-chevron,
.mat-mdc-tab-header-rtl
  .mat-mdc-tab-header-pagination-after
  .mat-mdc-tab-header-pagination-chevron {
  border-color: #ddd !important;
}
.mat-mdc-tab.mdc-tab--active .mdc-tab__text-label {
  color: #ddd !important;
}
.mat-mdc-tab.mdc-tab--active:hover .mdc-tab__text-label {
  color: #ddd !important;
}
// ------------------------------------------
form {
  .form-btn {
    width: 100%;
    padding: 8px;
    max-width: 300px;
    margin-top: 8px;
    font-size: 1.2rem;
    border-radius: 6px;

    color: #fff;
    border: none;
    cursor: pointer;
    box-sizing: border-box;
    background-color: #4caf50;
    transition: background-color 0.3s ease;
    display: flex;
    justify-content: center;
    align-items: center;

    @media screen and (min-width: 764px) {
      padding: 12px;
      margin-bottom: 16px;
    }
  }
}
.results-btn {
  width: 150px;
  padding: 1rem;
  border-radius: 8px;
  border: 1px solid #ffd700;
  margin: 0 auto;
  font-size: 14px;
  gap: 8px;

  color: #ffd700;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s linear;

  &:hover {
    border: 1px solid #ffd90086;
  }

  @media screen and (min-width: 764px) {
    width: 200px;
    font-size: 16px;
  }
}
// ========================
// error

.error-message {
  padding: 12px;
  border-radius: 8px;
  font-size: 16px;
  max-height: 200px;
  font-weight: 500;
  border: 1px solid #d32f2f;
  margin-top: 10px;
  overflow-y: auto;
  color: #d32f2f;
  ul {
    padding: 12px;
    margin: 8px 0 0;
    padding-left: 20px;
    display: flex;
    box-sizing: border-box;
    flex-wrap: wrap;
  }

  li {
    padding-left: 8px;
    margin-bottom: 4px;

    list-style-type: none;
    position: relative;
    display: flex;
    align-items: center;
  }
}
// test ul
ul {
  gap: 1rem;

  display: flex;
  list-style: none;
}
.test-score {
  color: #fff;
}
// ==================
.personality-test {
  max-width: 900px;
  margin: 0 auto;
  background-color: #ffffff;
  padding: 30px;
  border-radius: 12px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}
.hidden-btn {
  background-color: transparent;
  border: none;
  outline: none;
}
.section-title {
  font-size: 2rem;
  font-weight: 600;
  color: #fff;
  margin-bottom: 30px;
  text-align: center;
}

.question-card {
  margin-bottom: 16px;
  padding: 12px;
  margin-top: 16px;
  border-bottom: 2px solid #ddd;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
  transition: all 0.4s ease;

  @media screen and (min-width: 764px) {
    padding: 20px;
  }
}

//
.question-card h3 {
  font-size: 1.2rem;
  font-weight: 500;
  margin-bottom: 24px;

  color: #ddd;
  text-align: left;

  @media screen and (min-width: 764px) {
    font-size: 1.6rem;
  }
}

.answers {
  gap: 18px;

  display: flex;
  flex-direction: column;
  align-items: flex-start;

  label {
    gap: 12px;
    padding-left: 40px;
    transition: color 0.3s ease;
    font-size: 1rem;
    letter-spacing: 0.1em;

    color: #fff;
    cursor: pointer;
    text-align: left;
    display: flex;
    align-items: center;
    position: relative;
    &::before {
      content: "";
      width: 24px;
      height: 24px;
      border-radius: 50%;
      left: 0;
      top: 50%;
      transform: translateY(-50%);

      border: 3px solid #fff;
      position: absolute;
      background-color: transparent;
      transition: all 0.3s ease, border-color 0.3s ease;
    }

    &::after {
      content: "";
      width: 16px;
      height: 16px;
      border-radius: 50%;
      left: 4px;
      top: 50%;
      transform: translateY(-50%);

      position: absolute;
      background-color: transparent;
      transition: background-color 0.3s ease;
    }
    @media screen and (min-width: 764px) {
      font-size: 1.3rem;
    }
  }

  .radio-label:has(.radio-btn:checked)::after {
    background-color: #4caf50;
  }

  .radio-label:has(.radio-btn:focus)::before,
  .radio-label:has(.radio-btn:checked)::before {
    border-color: #fff;
  }
  @media screen and (min-width: 764px) {
    .radio-label:has(.radio-btn:hover)::before {
      border-color: #fff;
      background-color: #4caf50;
    }
    .radio-label:hover {
      color: #4caf50;
    }
  }

  input {
    margin-right: 10px;
  }

  input {
    display: none;
  }
}
